# uc-modern-cpp

./: .gitignore
cc/: CMakeLists.txt  uctc.cc
cc/math/: arith.cc  arith.h
cc/nn/: functions.cc  nn.cc  nn.h  optim.h
cc/nn/function/: function.h
cc/operators/: autodiff.cc  autodiff.h  nn.cc  nn.h  ops.cc  ops.h
cc/rand/: data.h
cc/tensor/: pyarray.cc  pyarray.h  tensor.cc  tensor.h
frontend/machinelearning/: models.py
frontend/mnist/: backend.py  dataloader.py  digits.py  models.py  nn.py
frontend/uct/: backend.py  dataset.py  mnist.py  models.py  perception.py  regression.py  utils.py
lab-guide/: 00-intro.md  01-fundamentals.md  02-autodiff.md  03-framework.md
programmming/: checker.h
programmming/01-class-construct/: main.cc
programmming/02-class-destruct/: main.cc
programmming/03-class-clone/: main.cc
programmming/04-class-move/: main.cc
programmming/05-class-derive/: main.cc
programmming/06-class-virtual/: main.cc
programmming/07-class-virtual-destruct/: main.cc
programmming/08-class-template/: main.cc
snippets/lec1/: 01-const-expr.cc  02-structured-binding.cc  03-type-inference-auto.cc  04-type-inference-decltype.cc  05-template-add.cc  06-template-with-auto.cc  07-template-args.cc  08-template-recursive-args.cc  09-template-unwrap-args.cc  10-vec-for-loop.cc  11-class-template.cc  12-non-class-template.cc
snippets/lec2/: 01-comparison.cc  02-pythonic-add.cc  03-higher-order-functions.cc  py-01-lambda.py  py-02-higher-order-functions.py
snippets/lec3/: 01-std-shared-ptr.cc  py-gc.py  py-ref-count.py
(+13 files in other folders)
